# qtstart

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  _explain_cmakelists.md  mainwindow.cpp  mainwindow.h  mainwindow.ui  qtstart_en_CH.ts
source/: mainwindow.ui
